@@ -199,8 +199,8 @@ public class WordBreakSolrSpellChecker extends SolrSpellChecker {
     
     StringBuilder sb = new StringBuilder();
     Token[] tokenArr = options.tokens.toArray(new Token[options.tokens.size()]);
+    List<Token> tokenArrWithSeparators = new ArrayList<>(options.tokens.size() + 2);
     List<Term> termArr = new ArrayList<>(options.tokens.size() + 2);
-    
     List<ResultEntry> breakSuggestionList = new ArrayList<>();
     List<ResultEntry> noBreakSuggestionList = new ArrayList<>();
     boolean lastOneProhibited = false;
@@ -219,6 +219,7 @@ public class WordBreakSolrSpellChecker extends SolrSpellChecker {
       if (i > 0
           && (prohibited != lastOneProhibited || required != lastOneRequired || lastOneprocedesNewBooleanOp)) {
         termArr.add(WordBreakSpellChecker.SEPARATOR_TERM);
+        tokenArrWithSeparators.add(null);
       }
       lastOneProhibited = prohibited;
       lastOneRequired = required;
@@ -226,6 +227,7 @@ public class WordBreakSolrSpellChecker extends SolrSpellChecker {
       
       Term thisTerm = new Term(field, tokenArr[i].toString());
       termArr.add(thisTerm);
+      tokenArrWithSeparators.add(tokenArr[i]);
       if (breakWords) {
         SuggestWord[][] breakSuggestions = wbsp.suggestWordBreaks(thisTerm,
             numSuggestions, ir, options.suggestMode, sortMethod);
@@ -269,10 +271,10 @@ public class WordBreakSolrSpellChecker extends SolrSpellChecker {
           if (i > firstTermIndex) {
             sb.append(" ");
           }
-          sb.append(tokenArr[i].toString());
+          sb.append(tokenArrWithSeparators.get(i).toString());
         }
-        Token token = new Token(sb.toString(), tokenArr[firstTermIndex]
-            .startOffset(), tokenArr[lastTermIndex].endOffset());
+        Token token = new Token(sb.toString(), tokenArrWithSeparators.get(firstTermIndex)
+            .startOffset(), tokenArrWithSeparators.get(lastTermIndex).endOffset());
         combineSuggestionList.add(new ResultEntry(token, cs.suggestion.string,
             cs.suggestion.freq));
       }
